--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 /nbproject/
 .mypy_cache/
 node_modules/
-tests/
 fabfile*
 .phpcs.xml.dist
 .travis.yml
@@ -12,4 +11,6 @@ vendor/
 phpunit.xml.dist
 .venv/
 .focalfossa/
-.focalfossa/
+tests/*
+!e2e/
+__pycache__/
