--- a/.github/workflows/wp-plugin-asset-readme-update.yml
+++ b/.github/workflows/wp-plugin-asset-readme-update.yml
@@ -2,13 +2,13 @@ name: Plugin asset/readme update
 on:
   push:
     branches:
-    - main
+    - trunk
 jobs:
-  master:
-    name: Push to main
+  trunk:
+    name: Push to trunk
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@master
     - name: WordPress.org plugin asset/readme update
       uses: 10up/action-wordpress-plugin-asset-update@stable
       env:
