--- a/.github/workflows/wp-plugin-asset-readme-update.yml
+++ b/.github/workflows/wp-plugin-asset-readme-update.yml
@@ -2,13 +2,13 @@ name: Plugin asset/readme update
 on:
   push:
     branches:
-    - trunk
+    - main
 jobs:
   trunk:
     name: Push to trunk
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: WordPress.org plugin asset/readme update
       uses: 10up/action-wordpress-plugin-asset-update@stable
       env:
