--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"env:start": "wp-env start",
+		"env:stop": "wp-env stop",
+		"env:clean": "wp-env clean",
+		"test:e2e": "wp-env start && cd _tests && npm install && npx playwright test",
 		"watch:tcs": "tsc -w assets/js/greeter.ts",
 		"watch:sass": "sass sass:css -w",
 		"watch-all": "run-p watch:*"
@@ -17,6 +21,7 @@
 	"devDependencies": {
 		"sass": "^1.49.0",
 		"npm-run-all": "^4.1.5",
-		"typescript": "^3.8.3"
+		"typescript": "^3.8.3",
+		"@wordpress/env": "^10.0.0"
 	}
 }
